Alteração do titulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--  comentario -->
 <html>
   <head>
-    <title>BRUNAO BONITAO 2021</title>
+    <title>SERGIO BONITAO 2021</title>
 
     <link rel="stylesheet" href="style.css" />
 
